--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -3,22 +3,29 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Quan', sans-serif; /* 使用自定义字体 */
-    background: url('../imgs/bg_tailer1.gif') center center fixed; /* 设置背景动图 */
+    background: url('../imgs/bg_cherry.gif') center center fixed; /* 设置背景动图 */
     background-size: cover;
+    height: 100%;
 }
 
+/* 导航栏部分 */
 .navbar {
     background-color: rgb(255, 255, 255);
-    padding: 5px 20px;
-    display: flex;
+    padding: 5px 10px 2px 10px;
+    display: fixed;
     justify-content: space-between;
     align-items: center;
     height: 44px;
 }
 
-.navbar-left {
+.navbar-flex {
     display: flex;
-    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.navbar-left {
+    flex:1;
 }
 
 .navbar-center {
@@ -28,9 +35,16 @@ body {
     justify-content: center;
 }
 
+.navbar-right {
+    flex:1;
+    display: flex;
+    align-items: center;
+    justify-content: right;
+}
+
 .logo {
-    width: 54px;
-    height: 54px;
+    width: 48px;
+    height: 48px;
     margin-right: 0px;
 }
 
@@ -41,9 +55,9 @@ body {
     color: #484848;
 }
 
-.dropdown-icon {
+.sidebar-icon {
     display: inline-block;
-    font-size: 32px;
+    font-size: 26px;
     cursor: pointer;
     color: #484848;
 }
@@ -51,16 +65,14 @@ body {
 .sidebar {
     display: inline-block;
     position: fixed;
-    top: 50px;
-    right: -370px;
+    top: 54px;
+    right: -280px;
     background-color: #ffffff;
-    width: 330px;
+    width: 280px;
     height: 100%;
     overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 20px;
+    transition: 0.3s;
     z-index: 1000;
-    padding: 20px;
 }
 
 .sidebar a {
@@ -80,18 +92,28 @@ body {
     right: 0px;
 }
 
-.main-content {
+/* 导航栏下横线 */
+.navbar-bottomline {
+    width: 100%;
+    height: 3px;
+    background-color: rgb(238, 238, 238);
+}
+
+/* 主体部分 */
+.main {
     margin: 14%;
-    margin-top: 60px;
+    margin-top: 80px;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    align-content: center;
-    padding-top: 32px;
+    height: 100%;
 }
 
 .title {
-    font-size: 35px;
+    font-size: 32px;
     color: #383838;
     margin-bottom: 10px;
+    line-height: 36px;
 }
 
 .subtitle {
@@ -103,6 +125,7 @@ body {
 .video {
     position: relative;
     width: 100%;
+    max-height: 300px;
     padding-bottom: 56.25%; /* 16：9 比例的长宽比 */
     margin: 20px 0; /* 上下留空 */
     overflow: hidden; /* 防止内容溢出 */
@@ -120,7 +143,7 @@ body {
     /* 使用贴图作为按钮背景 */
     background-image: url('../imgs/button1.png');
     background-size: cover; /* 调整背景图大小以填充按钮 */
-    color: white;
+    color: rgb(245, 245, 245);
     padding: 0px 0px;
     text-align: center;
     display: inline-block;
@@ -134,11 +157,11 @@ body {
 
 .grass {
     background-image: url('../imgs/bottom_grass.png');
-    background-size: cover;
+    background-size:contain;
     position: fixed;
     bottom: 0px;
     width: 100%;
-    height: 250px;
+    height: 180px;
 }
 
 .footer {
