--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Quan', sans-serif; /* 使用自定义字体 */
-    background: url('../imgs/bg_tailer1.gif') center center fixed; /* 设置背景动图 */
+    background: url('../imgs/bg_cherry.gif') center center fixed; /* 设置背景动图 */
     background-size: cover;
 }
 
