--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -126,7 +126,7 @@ body {
     position: relative;
     width: 100%;
     max-height: 300px;
-    padding-bottom: 56.25%; /* 16：9 比例的长宽比 */
+    padding-bottom: 41.84%; /* 16：9 比例的长宽比56.25  2.39:1 是41.84 */
     margin: 20px 0; /* 上下留空 */
     overflow: hidden; /* 防止内容溢出 */
 }
@@ -161,7 +161,7 @@ body {
     position: fixed;
     bottom: 0px;
     width: 100%;
-    height: 180px;
+    height: 160px;
 }
 
 .footer {
