--- a/css/style.css
+++ b/css/style.css
@@ -91,9 +91,10 @@ body {
 .footer {
     background-color: #333;
     color: white;
-    text-align: center;
+    text-align: right;
     padding: 3px 0;
     position: fixed;
     bottom: 0;
     width: 100%;
+    font-size: 10px;
 }
