--- a/css/style.css
+++ b/css/style.css
@@ -2,99 +2,234 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Quan', sans-serif; /* 使用自定义字体 */
-    background: url('../imgs/bg_cherry.gif') center center fixed; /* 设置背景动图 */
+    background: url('../imgs/bg_cherry1.gif') center center fixed; /* 设置背景动图 */
     background-size: cover;
 }
 
-.navbar {
-    display: flex;
-    justify-content: space-between;
+/* 放logo的窄侧边栏 */
+.sidebar {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ffffffc0;
+    width: 16%;
+    min-width: 200px;
+    height: 100%;
+    overflow-x: hidden;
     align-items: center;
-    padding: 10px 20px;
-    background-color: #ffffff; /* 导航栏背景色 */
-    color: #484848; /* 文字颜色 */
-    height: 40px;
+    z-index: 90;
 }
-
-.logo {
-    width: 50px; /* logo 图片宽度 */
-    height: auto; /* 自适应高度 */
-    margin-right: 5px; /* 图片右边距 */
-}
-
 .logo-container {
     display: flex;
-    align-items: center; /* 垂直居中 */
+    width: 100%;
+    height: 10%;
+    align-items: center;
+    justify-content: center;
+}
+.logo {
+    width: "auto";
+    height: 72%;
+    margin-right: 5px; /* 图片右边距 */
+    margin-left: 10px;
 }
 
 .logo-text {
-    font-size: 18px; /* 文字大小 */
-}
-
-.nav-links {
-    display: flex;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-.nav-links li {
-    margin-right: 20px; /* 导航项右边距 */
-}
-
-.nav-links a {
+    font-size: 30px; /* 文字大小 */
     color: #484848;
-    text-decoration: none;
 }
 
-.nav-links a:hover {
-    text-decoration: underline;
+/* 主要的边栏 */
+.mainbar {
+    position: fixed;
+    top: 10%;
+    right: 0;
+    bottom: 5%;
+    background-color: #fffffff3;
+    width: 28%;
+    min-width: 350px;
+    height: 85%;
+    border-top-left-radius: 80px; /* 左上角圆角 */
+    border-bottom-left-radius: 80px; /* 左下角圆角 */
+    overflow-x: hidden;
+    align-items: center;
+    z-index: 100;
 }
 
-
-
-.main-content {
-    margin: 5%;
-    margin-top: 60px; /* 留出导航栏空间 */
-    text-align: left; /* 网页内容靠左 */
-    padding: 20px;
+.mainbar-container {
+    display: flex;
+    flex-direction: column;
+    margin: 70px 30px 70px 50px;
 }
 
 .title {
-    color: #484848;
-    font-size: 48px;
-    margin-bottom: 10px;
+    color: #525252;
+    font-size: 44px;
+    line-height: 50px;
+    margin-bottom: 20px;
 }
 
 .subtitle {
     color: #484848;
-    font-size: 18px;
+    font-size: 20px;
+    line-height: 26px;
     margin-bottom: 20px;
 }
 
-.video {
+.text {
+    color: #484848;
+    font-size: 15px;
+    line-height: 20px;
     margin-bottom: 20px;
-    width: 715px;
-    height: 300px;
 }
-
+.twobutton-container {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
 .btn {
-    background-color: #7d7d7d;
+    background-image: url(../imgs/button1.png);
+    background-size: cover;
     color: white;
     padding: 10px 20px;
     text-align: center;
+    font-size: 30px;
     display: inline-block;
     border-radius: 5px;
     text-decoration: none;
+    width: 180px;
+    height: 28px;
+    margin-right: 20px;
+}
+.iconbutton {
+    background-image: url(../imgs/icon_paper.png);
+    background-size: cover;
+    padding: 14px 26px;
+    display: block;
+    height: 26px;
+    width: auto;
 }
 
-.footer {
-    background-color: #333;
+/* 滚动框 */
+.scroll-box {
+    width: 100%;
+    height: 260px; /* 窗口高度 */
+    background-color: #555; /* 窗口背景色 */
+    border-radius: 30px; /* 窗口圆角 */
+    overflow: hidden; /* 隐藏溢出内容 */
+    position: relative; /* 相对定位，用于定位文字 */
+    display: flex; /* 使用 flex 布局 */
+    justify-content: center; /* 水平居中 */
+    align-items: center; /* 垂直居中 */
+    bottom: 0;
+}
+
+.scroll-item {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: 0.8s; /* 图片切换动画 */
+    background-size: cover; /* 背景图片尺寸调整为容器大小 */
+    background-repeat: no-repeat; /* 背景图片不重复 */
+    background-position: center; /* 背景图片居中 */
+    opacity: 0;
+}
+
+.scroll-item.active {
+    display: block;
+    opacity: 1;
+}
+
+.scroll-text {
+    position: absolute;
+    margin-bottom: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 12px;
+    background-color: rgba(0, 0, 0, 0.7); /* 背景色 */
+    color: white; /* 文字颜色 */
+    text-align: center; /* 文字居中 */
+}
+
+/* 左侧视频大区域 */
+.main-content {
+    position: fixed;
+    height: 50%;
+    top: 25%;
+    bottom: 25%;
+    left: 18%;
+}
+.video {
+    margin-bottom: 20px;
+    width: 640px;
+    height: 360px;
+}
+
+/* 左下角地图bar */
+.mapbar {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    background-color: #ffffffdc;
+    width: 23%;
+    min-width: 340px;
+    height: 16%;
+    border-top-right-radius: 66px; /* 左上角圆角 */
+    overflow-x: hidden;
+    align-items: center;
+    z-index: 90;
+}
+.map-container {
+    display: flex;
+    flex-direction: column;
+    margin: 18px 8%;
+}
+.map-title {
+    color: #525252;
+    font-size: 30px;
+    line-height: 30px;
+    margin-bottom: 6px;
+}
+.map-subtitle {
+    color: #484848;
+    font-size: 15px;
+    line-height: 15px;
+    margin-bottom: 6px;
+}
+.map-btn {
+    background-image: url(../imgs/button2.png);
+    background-size: cover;
     color: white;
+    padding: 10px 20px;
+    text-align: center;
+    font-size: 20px;
+    line-height: 26px;
+    display: inline-block;
+    border-radius: 5px;
+    text-decoration: none;
+    width: 80px;
+    height: 24px;
+}
+.map-icon {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    height: 86%;
+    width: auto;
+}
+
+/* 网站脚注 */
+.footer {
+    color: rgb(60, 60, 60);
     text-align: right;
     padding: 3px 0;
     position: fixed;
-    bottom: 0;
+    bottom: 15px;
+    right: 10px;
     width: 100%;
     font-size: 10px;
+    z-index: 110;
 }
